--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=b6de935d320dd4ecf4c0ec93c0520fc7
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://symfony:symfony@db:3306/symfony
 ###< doctrine/doctrine-bundle ###
