--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "doctrine/annotations": "^1.7",
         "fortawesome/font-awesome": "^5.11",
         "sensio/framework-extra-bundle": "^5.4",
+        "swiftmailer/swiftmailer": "^6.2",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
@@ -15,6 +16,7 @@
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
