Added FOSUserBundle and EasyAdminBundle

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -14,6 +14,8 @@ framework:
     #fragments: true
     php_errors:
         log: true
-
+    templating:
+            engines: ['twig']
+            
 parameters:
     coming_soon: '%env(COMING_SOON)%'
