--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.7",
+        "easycorp/easyadmin-bundle": "^2.3",
         "fortawesome/font-awesome": "^5.11",
+        "friendsofsymfony/user-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.4",
         "swiftmailer/swiftmailer": "^6.2",
         "symfony/asset": "4.3.*",
@@ -17,6 +19,7 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/orm-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
