--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "components/font-awesome": "^5.9",
         "doctrine/annotations": "^1.7",
         "easycorp/easyadmin-bundle": "^2.3",
         "fortawesome/font-awesome": "^5.11",
