--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,9 @@ security:
             anonymous:    true
 
     access_control:
+        - { path: ^/profile, roles: ROLE_ADMIN }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/, role: ROLE_USER }
