Send an email to notify about the activation of an account

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -29,6 +29,8 @@ easy_admin:
                     - { property: 'lastLogin', label: 'Dernière connexion' }
                     - { property: 'roles', label: 'Rôles' }
                     - { property: 'guests', label: 'Invités' }
+                actions: 
+                    - { name: 'emailWhenActivated', label: "Email d'activation" }
             search:
                 fields: ['username', 'email', 'enabled', 'lastLogin']
             form:
