--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "vich/uploader-bundle": "^1.10"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.13"
