--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,5 +2,21 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
+# Annotations
+controllers:
+    resource: ../src/Controller/
+    type: annotation
+
+# FOSUserBundle
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+# FMElfinderBundle
+fm_elfinder:
+    resource: "@FMElfinderBundle/Resources/config/routing.yml"
+
+# EasyAdminBundle
+easy_admin_bundle:
+    resource: '../src/Controller/AdminController.php'
+    prefix: /admin
+    type: annotation
