--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fortawesome/font-awesome": "^5.11",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "^2.1",
+        "helios-ag/fm-elfinder-bundle": "^9.3",
         "sensio/framework-extra-bundle": "^5.4",
         "swiftmailer/swiftmailer": "^6.2",
         "symfony/asset": "4.3.*",
@@ -33,7 +34,8 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "component-dir": "public/dist"
     },
     "autoload": {
         "psr-4": {
@@ -70,7 +72,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "4.3.*"
         }
     }
