--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.3.*",
         "vich/uploader-bundle": "^1.10"
     },
