--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,18 @@
         "helios-ag/fm-elfinder-bundle": "^9.3",
         "sensio/framework-extra-bundle": "^5.4",
         "swiftmailer/swiftmailer": "^6.2",
-        "symfony/asset": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
+        "symfony/asset": "^4.3",
+        "symfony/console": "^4.3",
+        "symfony/dotenv": "^4.3",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "4.3.*",
-        "symfony/framework-bundle": "4.3.*",
+        "symfony/form": "^4.3",
+        "symfony/framework-bundle": "^4.3",
         "symfony/orm-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "4.3.*",
-        "symfony/twig-bundle": "4.3.*",
+        "symfony/translation": "^4.3",
+        "symfony/twig-bundle": "^4.3",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "4.3.*",
+        "symfony/yaml": "^4.3",
         "vich/uploader-bundle": "^1.10"
     },
     "require-dev": {
@@ -74,7 +74,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "4.3.*"
+            "require": "^4.3"
         }
     }
 }
