--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "node-sass": "^4.13.1",
         "overlapping-marker-spiderfier-leaflet": "^0.2.7",
         "popper.js": "^1.16.1",
+        "pretty-checkbox": "^3.0.3",
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^7.0.1",
         "webpack-notifier": "^1.6.0"
