--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "dropzone": "^5.7.0"
     }
 }
