--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "dropzone": "^5.7.0"
+        "dropzone": "^5.7.0",
+        "magnific-popup": "^1.1.0"
     }
 }
